# OzonPriceTracker

./: .env  .gitignore  README.md  locustfile.py  mutmut_config.py  pyproject.toml  pytest.ini  ruff.toml  secrets.env
.github/.workflows/: main.yml
.github/workflows/: main.yml
.streamlit/: config.toml
app/: api.py  api_models.py  app.py  database.py  scraper.py  tgwrapper.py
app/static/: styles.css  theme.html
test/: test_api.py  test_app.py  test_database.py  test_scraper.py  test_tgwrapper.py
test/static/: user_pfp_example
